<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_login"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideHorizontal25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideHorizontalTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/guide_horizontal_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide_start_vertical_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide_end_vertical_margin" />

        <TextView
            android:id="@+id/tvMyBeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_700"
            android:text="@string/subscribe"
            android:textColor="@color/white"
            android:textSize="@dimen/login_title_text_size"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
            app:layout_constraintTop_toTopOf="@id/guideHorizontalTop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_user_input_to_center"
            app:helperText="@string/required"
            android:theme="@style/MyTextInputLayout_overlay"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@id/guideHorizontal25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:hint="@string/name"
                android:textColor="@color/white_80" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top_user_input_to_center"
            app:helperText="@string/required"
            android:theme="@style/MyTextInputLayout_overlay"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:hint="@string/label_user"
                android:textColor="@color/white_80" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_between_user_password"
            app:helperText="@string/required"
            android:theme="@style/MyTextInputLayout_overlay"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
            app:layout_constraintTop_toBottomOf="@id/tilUsername"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white_60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:textColor="@color/white_80" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.mybeats.view.components.ProgressButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            app:text="@string/register"
            style="@style/Widget.ProgressButton.Purple"
            app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
            app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>