<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.products.detail.ProductDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/product_detail_appbar_height"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background_collapsing_list">

            <ImageView
                android:id="@+id/ivHeadset"
                android:layout_width="@dimen/product_detail_image_size"
                android:layout_height="@dimen/product_detail_image_size"
                android:contentDescription="@string/phone_model_02"
                android:src="@drawable/headset"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/shadow"
                app:layout_constraintEnd_toEndOf="@id/ivHeadset"
                app:layout_constraintStart_toStartOf="@id/ivHeadset"
                app:layout_constraintTop_toBottomOf="@id/ivHeadset"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:elevation="8dp"
        android:fontFamily="@font/dm_sans_700"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/product_detail_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        tools:text="Modelo 01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_start_vertical_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_end_vertical_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVertical40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/tvModel" />

    <TextView
        android:id="@+id/labelConnection"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_connection"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine" />

    <TextView
        android:id="@+id/tvConnection"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelConnection"
        tools:text="Conexão" />

    <TextView
        android:id="@+id/labelCompatibility"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_infos"
        android:text="@string/label_compatibility"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/labelConnection" />

    <TextView
        android:id="@+id/tvCompatibility"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelCompatibility"
        tools:text="Conexão" />

    <TextView
        android:id="@+id/labelPowerSupply"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_infos"
        android:text="@string/label_power_supply"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/labelCompatibility" />

    <TextView
        android:id="@+id/tvPowerSupply"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelPowerSupply"
        tools:text="Conexão" />

    <TextView
        android:id="@+id/labelAutonomy"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_infos"
        android:text="@string/label_autonomy"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/labelPowerSupply" />

    <TextView
        android:id="@+id/tvAutonomy"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelAutonomy"
        tools:text="Conexão" />

    <TextView
        android:id="@+id/labelHeight"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_infos"
        android:text="@string/label_height"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/labelAutonomy" />

    <TextView
        android:id="@+id/tvHeight"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelHeight"
        tools:text="Conexão" />

    <TextView
        android:id="@+id/labelCapture"
        style="@style/productInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_infos"
        android:text="@string/label_capture"
        app:layout_constraintEnd_toEndOf="@id/guideVertical40"
        app:layout_constraintTop_toBottomOf="@+id/labelHeight" />

    <TextView
        android:id="@+id/tvCapture"
        style="@style/productInfoValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/product_detail_margin_between_label_and_value"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVertical40"
        app:layout_constraintTop_toTopOf="@id/labelCapture"
        tools:text="Conexão" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnter"
        style="@style/commonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/product_detail_margin_between_info_and_button"
        app:layout_constraintEnd_toEndOf="@id/guideVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guideVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/labelCapture" />


</androidx.constraintlayout.widget.ConstraintLayout>